# loop-tui

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix
src/: app.rs  loop.txt  main.rs  modal.rs  state.rs  store.rs  task.rs
